@startuml

title __OBB's Class Diagram__\n

  package engine {
    package engine.collision {
      package engine.collision.obb {
        class OBBAABBCollision {
            + OBBAABBCollision()
            + resolve()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.obb {
        abstract class OBBCollision {
            + OBBCollision()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.obb {
        class OBBOBBCollision {
            + OBBOBBCollision()
            + resolve()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.obb {
        class OBBSphereCollision {
            + OBBSphereCollision()
            + resolve()
        }
      }
    }
  }
  

  OBBAABBCollision -up-|> OBBCollision
  OBBCollision -up-|> Collision
  OBBOBBCollision -up-|> OBBCollision
  OBBSphereCollision -up-|> OBBCollision


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
